--- a/generator/config.json
+++ b/generator/config.json
@@ -16,12 +16,21 @@
       "function": "#407de6",
       "macro": "#5457ec"
    },
+
+
+
+   
    "filters": {
       "readonly": {
          "default": {
             "darken": 10,
             "saturate": 5,
             "spin": -6
+         },
+         "parameter": {
+            "darken": 15,
+            "saturate": 2,
+            "spin": -1
          },
          "enum": {
             "darken": 23,
