--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
       "maximalist",
       "colorful"
    ],
+   "files": [
+      "themes"
+   ],
    "contributes": {
       "themes": [
          {
