readme data outsourced into config

--- a/generator/config.json
+++ b/generator/config.json
@@ -203,5 +203,7 @@
             "defaultLibrary.documentation"
          ]
       }
-   ]
+   ],
+   "readmePath": "./README.md",
+   "readmeTemplatePath": "./generator/_Template.md"
 }
