--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,3 +2,8 @@
 .vscode-test/**
 .gitignore
 vsc-extension-quickstart.md
+./assets/ex_1.png
+./assets/ex_2.png
+./assets/ex_3.png
+./assets/SR_Banner.svg
+./assets/SR_icon.svg
