--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
                "namespace": [
                   "meta.symbol.namespace"
                ],
+               "class.defaultLibrary": [
+                  "support.class"
+               ],
                "function.defaultLibrary": [
                   "support.function.builtin",
                   "support.function.misc",
@@ -80,7 +83,8 @@
                   "meta.flow-mapping.yaml",
                   "support.type.property-name.css",
                   "meta.property-name",
-                  "entity.other.attribute-name"
+                  "entity.other.attribute-name",
+                  "entity.name.tag.yaml"
                ],
                "class": [
                   "entity.name.type.class",
