- added more class fallbacks - a bunch of new bash related highlighting

--- a/generator/config.json
+++ b/generator/config.json
@@ -119,13 +119,15 @@
          "fallbacks": {
             "parameter": [
                "variable.parameter.function",
+               "variable.parameter",
                "variable.parameter.function-call",
                "meta.function.parameter",
                "meta.function.parameters"
             ],
             "function": [
                "entity.name.function",
-               "meta.function-call"
+               "meta.function-call",
+               "entity.name.command"
             ],
             "variable": [
                "variable.other.readwrite",
@@ -137,6 +139,9 @@
             ],
             "variable.readonly": [
                "entity.name.tag"
+            ],
+            "variable.declaration": [
+               "variable.other.assignment.shell"
             ],
             "type": [
                "entity.name.type.alias",
@@ -158,6 +163,7 @@
                "support.variable.property",
                "variable.other.object.property",
                "meta.attribute",
+               "constant.other.option",
                "support.type.property-name",
                "variable.object.property",
                "meta.flow-mapping.yaml",
@@ -168,6 +174,7 @@
             ],
             "class": [
                "entity.name.type.class",
+               "entity.name.class",
                "entity.other.inherited-class",
                "entity.other.attribute-name.class"
             ],
