.vscodeignore update for less bloated output

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,8 +2,14 @@
 .vscode-test/**
 .gitignore
 vsc-extension-quickstart.md
-./assets/ex_1.png
-./assets/ex_2.png
-./assets/ex_3.png
-./assets/SR_Banner.svg
-./assets/SR_icon.svg
+assets/ex_1.png
+assets/ex_2.png
+assets/ex_3.png
+assets/SR_Banner.svg
+assets/SR_icon.svg
+test/**
+generator/**
+.github
+colors/**
+answer.md
+index.html
