--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "name": "Thertzlor"
    },
    "icon": "assets/SR_icon256.png",
-   "version": "1.1.1",
+   "version": "1.1.2",
    "homepage": "https://thertzlor.github.io/semantic-rainbow/",
    "engines": {
       "vscode": "^1.60.0"
@@ -55,7 +55,8 @@
                   "variable",
                   "support.variable",
                   "markup.heading",
-                  "entity.name.section"
+                  "entity.name.section",
+                  "string.other.link.title.markdown"
                ],
                "variable.readonly": [
                   "entity.name.tag"
