--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
    "categories": [
       "Themes"
    ],
+   "capabilities": {
+      "untrustedWorkspaces": {
+         "supported": true
+      }
+   },
    "keywords": [
       "semantic highlighting",
       "dark",
@@ -54,8 +59,6 @@
                   "variable.other",
                   "variable",
                   "support.variable",
-                  "markup.heading",
-                  "entity.name.section",
                   "string.other.link.title.markdown"
                ],
                "variable.readonly": [
@@ -66,7 +69,17 @@
                ],
                "type": [
                   "entity.name.type.alias",
-                  "support.type"
+                  "support.type",
+                  "markup.italic.markdown"
+               ],
+               "type.readonly": [
+                  "markup.bold.markdown"
+               ],
+               "type.defaultLibrary.static.async": [
+                  "markup.strikethrough.markdown"
+               ],
+               "type.static": [
+                  "markup.math.inline.markdown"
                ],
                "namespace": [
                   "meta.symbol.namespace"
@@ -78,6 +91,9 @@
                   "support.function.builtin",
                   "support.function.misc",
                   "support.function"
+               ],
+               "property.readonly": [
+                  "markup.list.numbered.markdown"
                ],
                "property": [
                   "variable.other.property",
@@ -92,7 +108,8 @@
                   "support.type.property-name.css",
                   "meta.property-name",
                   "entity.other.attribute-name",
-                  "entity.name.tag.yaml"
+                  "entity.name.tag.yaml",
+                  "markup.list.unnumbered.markdown"
                ],
                "class": [
                   "entity.name.type.class",
