--- a/generator/config.json
+++ b/generator/config.json
@@ -146,7 +146,8 @@
             "type": [
                "entity.name.type.alias",
                "support.type",
-               "markup.italic.markdown"
+               "markup.italic.markdown",
+               "entity.name.type.kotlin"
             ],
             "type.readonly":[
                "markup.bold.markdown"
