--- a/generator/config.json
+++ b/generator/config.json
@@ -189,6 +189,9 @@
             "class.defaultLibrary": [
                "support.class"
             ],
+            "function:lua": [
+               "support.function.any-method"
+            ],
             "function.defaultLibrary": [
                "support.function.builtin",
                "support.function.misc",
@@ -207,6 +210,7 @@
                "support.type.property-name",
                "variable.object.property",
                "meta.flow-mapping.yaml",
+               "entity.other.attribute",
                "support.type.property-name.css",
                "meta.property-name",
                "entity.other.attribute-name",
@@ -266,7 +270,8 @@
             "defaultLibrary.static",
             "defaultLibrary.declaration",
             "defaultLibrary.async",
-            "defaultLibrary.documentation"
+            "defaultLibrary.documentation",
+            "function:lua"
          ]
       }
    ],
