--- a/generator/config.json
+++ b/generator/config.json
@@ -159,6 +159,9 @@
             "type.readonly":[
                "markup.bold.markdown"
             ],
+            "interface.readonly":[
+               "comment.line.double-dash.doc variable"
+            ],
             "type.defaultLibrary.static.async":[
                "markup.strikethrough.markdown"
             ],
@@ -173,7 +176,8 @@
                "support.type.builtin"
             ],
             "type.defaultLibrary": [
-               "support.type.built-in"
+               "support.type.built-in",
+               "comment.line.double-dash.doc support.type"
             ],
             "function.static": [
                "storage.type.template"
