--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "name": "Thertzlor"
    },
    "icon": "assets/SR_icon256.png",
-   "version": "1.1.7",
+   "version": "1.1.8",
    "homepage": "https://thertzlor.github.io/semantic-rainbow/",
    "engines": {
       "vscode": "^1.60.0"
@@ -106,6 +106,7 @@
                ],
                "type.defaultLibrary": [
                   "support.type.built-in",
+                  "storage.type.primitive",
                   "comment.line.double-dash.doc support.type"
                ],
                "function.static": [
@@ -166,6 +167,7 @@
                   "entity.name.function.member"
                ],
                "selfParameter": [
+                  "variable.language.java",
                   "variable.language.this",
                   "variable.language.self",
                   "variable.language.special.self"
